service.yml
apiVersion: v1
kind: Service
metadata:
  name: django-website-service
  namespace: argocd
spec:
  type: ClusterIP
  selector:
    app: django-website 
  ports:
    - protocol: TCP
      port: 80    
      targetPort: 8000
  type: LoadBalancer
